<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_no_telp_anda"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_nomor_di_sini"
        android:inputType="phone"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/text"
        android:autofillHints="" />
    <Button
        android:id="@+id/btngenerateOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginBottom="20dp"
        android:text="@string/kirim_otp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/btngenerateOTP"
        android:autofillHints="" />
    <Button
        android:id="@+id/btnverifyOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp"
        android:layout_marginBottom="20dp"
        android:text="@string/verifikasi_otp"
        android:textSize="20sp"
        android:enabled="false"/>
    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnverifyOTP"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

</RelativeLayout>